<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.scan.RequestPermissionsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/scanning"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GolosMedium.16" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.85" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GolosMedium.24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/permission_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GolosRegular.16" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/permissionsButton"
        style="@style/ButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/allow_permissions" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</androidx.appcompat.widget.LinearLayoutCompat>